CB-7083 - Availability zone fetching optimisations